--- a/codec-http/pom.xml
+++ b/codec-http/pom.xml
@@ -24,6 +24,7 @@
   </parent>
 
   <artifactId>netty-codec-http</artifactId>
+  <version>4.0.20-Fork</version>
   <packaging>jar</packaging>
 
   <name>Netty/Codec/HTTP</name>
@@ -32,12 +33,12 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>netty-codec</artifactId>
-      <version>${project.version}</version>
+      <version>4.0.20.Final-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>netty-handler</artifactId>
-      <version>${project.version}</version>
+      <version>4.0.20.Final-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.jcraft</groupId>
