--- a/all/pom.xml
+++ b/all/pom.xml
@@ -18,7 +18,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.netty</groupId>
+  <groupId>hamstercoders</groupId>
     <artifactId>netty-parent</artifactId>
     <version>4.0.20.Final-SNAPSHOT</version>
   </parent>
@@ -464,7 +464,7 @@
         </configuration>
         <dependencies>
           <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>io.netty</groupId>
             <artifactId>netty-build</artifactId>
             <version>19</version>
           </dependency>
