--- a/codec/pom.xml
+++ b/codec/pom.xml
@@ -18,7 +18,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.netty</groupId>
+	<groupId>hamstercoders</groupId>
     <artifactId>netty-parent</artifactId>
     <version>4.0.20.Final-SNAPSHOT</version>
   </parent>
@@ -49,7 +49,7 @@
       <artifactId>jzlib</artifactId>
       <optional>true</optional>
     </dependency>
-    
+
     <!-- Test dependencies for jboss marshalling encoder/decoder -->
     <dependency>
       <groupId>org.jboss.marshalling</groupId>
