--- a/handler/pom.xml
+++ b/handler/pom.xml
@@ -18,7 +18,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.netty</groupId>
+	<groupId>hamstercoders</groupId>
     <artifactId>netty-parent</artifactId>
     <version>4.0.20.Final-SNAPSHOT</version>
   </parent>
@@ -45,10 +45,10 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>io.netty</groupId>
       <artifactId>netty-tcnative</artifactId>
-      <classifier>${os.detected.classifier}</classifier>
-      <optional>true</optional>
+		<version>1.1.30.Fork2</version>
+		<optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
