--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -18,8 +18,8 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.netty</groupId>
-    <artifactId>netty-parent</artifactId>
+	<groupId>hamstercoders</groupId>
+     <artifactId>netty-parent</artifactId>
     <version>4.0.20.Final-SNAPSHOT</version>
   </parent>
 
@@ -70,10 +70,10 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>io.netty</groupId>
       <artifactId>netty-tcnative</artifactId>
-      <classifier>${os.detected.classifier}</classifier>
-      <optional>true</optional>
+		<version>1.1.30.Fork2</version>
+		<optional>true</optional>
     </dependency>
   </dependencies>
 
