--- a/transport-udt/pom.xml
+++ b/transport-udt/pom.xml
@@ -19,8 +19,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>io.netty</groupId>
-    <artifactId>netty-parent</artifactId>
+	<groupId>hamstercoders</groupId>
+     <artifactId>netty-parent</artifactId>
     <version>4.0.20.Final-SNAPSHOT</version>
   </parent>
 
