--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,12 @@
   </licenses>
   <inceptionYear>2008</inceptionYear>
 
-  <scm>
-    <url>https://github.com/netty/netty</url>
-    <connection>scm:git:git://github.com/netty/netty.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/netty/netty.git</developerConnection>
-    <tag>HEAD</tag>
-  </scm>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>Hamstercoders repo</id>
+			<url>http://repu.huyaru.com</url>
+		</pluginRepository>
+	</pluginRepositories>
 
   <developers>
     <developer>
